fix foreground so more contrast

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -69,7 +69,7 @@
 
 [data-theme='dark'] {
   --background: #0A0A0A;
-  --foreground: #E3E3E3;
+  --foreground: #ffffff;
   --primary: oklch(0.922 0 0);
   --primary-foreground: oklch(0.205 0 0);
   --secondary: #262626;
